--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -8,6 +8,23 @@
 
 	**************************************************
 	*						 *
+	*	       2.12 SERIES NEWS			 *
+	*						 *
+	**************************************************
+
+
+    		CHANGES IN R VERSION 2.12.0
+
+
+INSTALLATION
+
+     o	The 64-bit Tcl installation is now in directory R_HOME/Tcl64.
+
+
+
+
+	**************************************************
+	*						 *
 	*	       2.11 SERIES NEWS			 *
 	*						 *
 	**************************************************
