--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2510,7 +2510,8 @@ used if specified by @option{--with-system-zlib},
 versions in the @R{} sources will be compiled in.  As the latter suffice
 and are tested with @R{} you should not need to change this.  In
 particular, the version of @code{zlib} 1.2.3 in the @R{} sources has
-enhancements to work with large file systems on 32-bit platforms.
+enhancements to work with large file systems on 32-bit platforms, and
+@code{zlib} 1.2.4 is not currently compatible with @R{}. 
 
 @code{liblzma} from @code{xz-utils} version 4.999 or later will be used
 if installed: the version in the @R{} sources can be selected instead by
