use sub-architectures on 32-bit Windows Also use them for the bin directory on Windows
git-svn-id: https://svn.r-project.org/R/trunk@51491 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -737,6 +737,10 @@ R --arch=@var{name} CMD make check[-devel|all]
 @noindent
 to select a sub-architecture to check.
 
+Sub-architectures are also used on Windows, but by selecting the
+appropriate @file{bin} directory, @file{@var{R_HOME}/bin/i386} or
+@file{@var{R_HOME}/bin/x64}.
+
 @menu
 * Multilib::                    
 @end menu
