--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -33,6 +33,9 @@ INSTALLATION
 
      o	The 64-bit Tcl installation is now in directory R_HOME/Tcl64.
 
+     o	The 64-bit installer (which runs only on a 64-bit system) can
+	be used to add 64-bit components to a 32-bit install.
+
 
 
 
