look for POSIX tr
git-svn-id: https://svn.r-project.org/R/trunk@51510 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,9 @@ INSTALLATION
     o	A C99 compiler is now required, and more C99 language features
 	will be used in the R sources.
 
+    o	configure looks for a POSIX compliant tr, Solaris's
+	/usr/ucb/tr having been found to cause Rdiff to malfunction.
+
 
 BUG FIXES
 
