port r51510, 51513 etc from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51514 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -406,6 +406,9 @@ INSTALLATION
     o	UTF-8 is now used for the reference manual and package
 	manuals.  This requires LaTeX '2005/12/01' or later.
 
+    o	configure looks for a POSIX compliant tr, Solaris's
+	/usr/ucb/tr having been found to cause Rdiff to malfunction.
+
 
 PACKAGE INSTALLATION
 
