port r51519 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51520 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -409,6 +409,9 @@ INSTALLATION
     o	configure looks for a POSIX compliant tr, Solaris's
 	/usr/ucb/tr having been found to cause Rdiff to malfunction.
 
+    o	configure is now generated with autoconf-2.65, which works
+	better on recent systems and on Mac OS X.
+
 
 PACKAGE INSTALLATION
 
