allow R CMD INSTALL to install zip files on Windows
git-svn-id: https://svn.r-project.org/R/trunk@51526 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -24,9 +24,11 @@ NEW FEATURES
 	Architecture-specific files (such as Rgui.exe) are now in
 	R_HOME/bin/i386 or R_HOME/bin/x64.
 
-	For now, 32-bit packages with compiled code built under
-	2.{10,11}.x can be used, but this will be disabled before
-	release.
+	For now, almost all 32-bit packages with compiled code built
+	under 2.{10,11}.x can be used, but this will be disabled
+	before release.
+
+    o	R CMD INSTALL can install zipfiles as binary packages.
 
 
 INSTALLATION
