Port r51534 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51535 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -543,6 +543,9 @@ BUG FIXES
     o	The X11() device with cairo but not Pango (notably Mac OS X)
 	now checks validity of text strings in UTF-8 locales (since
 	Pango does but cairo it seems does not).
+	
+    o	read.fwf() misread multi-line records when n was specified.
+        (PR#14241)
 
 
 
