--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -27,6 +27,10 @@ NEW FEATURES
 	use ${R_HOME}/bin${R_ARCH_BIN} as a portable way to find
 	these.
 
+	Because people expect it, there is an executable
+	R_HOME/bin/R.exe, which accepts --arch and launches either
+	R_HOME/bin/i386/R.exe or R_HOME/bin/x64/R.exe.
+
 	For now, almost all 32-bit packages with compiled code built
 	under 2.{10,11}.x can be used, but this will be disabled
 	before release.
