tweaks to Windows installer
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51539 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1234,8 +1234,8 @@ values that can be set.
 
 It is also possible to build an installer for use with Microsoft
 Installer.  This is intended for use by sysadmins doing automated
-installs, and is not recommended for casual use.  (It is only supported
-for 32-bit Windows in R 2.11.x.)
+installs, and is not recommended for casual use.  It is only supported
+for 32-bit Windows at present.
 
 It makes use of the Windows Installer XML (WiX) toolkit @emph{version
 2.0} available from @uref{http://wix.sourceforge.net/}.  (This needs the
