--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -221,7 +221,7 @@ set the default Start-menu group name
 @item /COMPONENTS="comma separated list of component names"
 set the initial list of components: Components are named @samp{main},
 @samp{html}, @samp{manuals}, @samp{manuals/basic},
-@samp{manuals/technical}, @samp{manuals/refman}, @samp{libdocs},
+@samp{manuals/technical}, @samp{manuals/refman}, @samp{manuals/libdocs},
 @samp{tcl}, @samp{tcl/tzdata}, @samp{tcl/chm}, @samp{trans} and @code{tests}.
 @end table
 
