--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -151,19 +151,20 @@ mainly on 32-bit XP SP3 and 64-bit Windows 7 and Windows Server 2008.
 
 Your file system must allow case-honouring long file names (as is likely
 except perhaps for some network-mounted systems).  A typical install
-takes 50Mb of disk space, a full installation about 65Mb and a
-minimal one about 29Mb.
+takes 45Mb of disk space, a full installation about 70Mb and a
+minimal one about 30Mb.
+@c: 70Mb is for 64-bit
 
 If you want to be able to build packages from sources, we recommend that
 you choose an installation path not containing spaces.  (Using a path
 with spaces in will probably work, but is little-tested.)  Users of
-Vista/Windows 7 installing for a single user using an account with
-administrator rights@footnote{Non-administrator accounts will
-automatically be offered a default installation directory in the user
-area.} should consider installing into a non-system area (such as
-@file{C:\R}).  Installing to a network share (a filepath starting
-with @code{\\machine\...}) is not supported: such paths will need to
-mapped to a network drive.
+Vista/Windows 7/Server 2008 installing for a single user using an
+account with administrator rights@footnote{Non-administrator accounts
+will automatically be offered a default installation directory in the
+user area.} should consider installing into a non-system area (such as
+@file{C:\R}).  Installing to a network share (a filepath starting with
+@code{\\machine\...}) is not supported: such paths will need to mapped
+to a network drive.
 
 To install use @samp{@RWVER@-win32.exe}.  Just double-click on the icon
 and follow the instructions.  If you have an account with Administrator
@@ -319,7 +320,8 @@ Indeed there is.  It is set by the command-line flag
 @option{--max-mem-size} (@pxref{How do I install R for Windows?}) and
 defaults to the smaller of the amount of physical RAM in the machine and
 0.5GB less than the limit of user virtual memory for a process (most
-often 2GB).  It can be set to any amount between 32Mb and 4095Mb.
+often 2GB on a 32-bit build).  It can be set to any amount between 32Mb
+and 4095Mb (on a 32-bit build).
 
 Use @code{?Memory} and @code{?memory.size} for information about memory
 usage.  The limit can be raised by calling @code{memory.limit} within a
@@ -1426,7 +1428,7 @@ which also explains how the various types of completion work.
 
 This feature is very similar to the completion available in the
 @code{readline}-based command line interface on Unix-alikes: the Mac OS
-X Gui has a different completion scheme.
+X GUI @code{R.app} has a different completion scheme.
 
 @newchap{}
 @node Workspaces, The R Console, Windows Features, Top
@@ -1770,7 +1772,7 @@ call @code{R_ProcessEvents()} periodically from your compiled code.
 If you want output to be updated on the console, call
 @code{R_FlushConsole()} and then @code{R_ProcessEvents()}.
 
-@set LASTEDIT 2010-02-25
+@set LASTEDIT 2010-04-01
 @ifhtml
 @html
 <hr WIDTH="100%">
