avoid line breaks in names
git-svn-id: https://svn.r-project.org/R/trunk@51547 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -29,4 +29,4 @@ Simon Urbanek
 plus Heiner Schwarte up to October 1999 and Guido Masarotto up to June 2003.
 
 Current R-core members can be contacted via email to R-project.org
-with name made up by replacing space by dots in the name listed above.
+with name made up by replacing spaces by dots in the name listed above.
