--- a/doc/THANKS
+++ b/doc/THANKS
@@ -2,23 +2,19 @@ R would not be what it is today without the invaluable help of these
 people, who contributed by donating code, bug fixes and documentation:
 
 Valerio Aimale, Thomas Baier, Roger Bivand, Ben Bolker, David Brahm,
-Goran Brostrom, Patrick Burns, Vince Carey, Saikat DebRoy, Brian
-D'Urso, Lyndon Drake, Dirk Eddelbuettel, Claus Ekstrom, Sebastian
-Fischmeister, John Fox, Paul Gilbert, Yu Gong, Gabor Grothendieck,
-Frank E Harrell Jr, Torsten Hothorn, Robert King, Kjetil Kjernsmo,
-Roger Koenker, Philippe Lambert, Jan de Leeuw, Uwe Ligges, Jim
-Lindsey, Patrick Lindsey, Catherine Loader, Gordon Maclean, John
-Maindonald, David Meyer, Ei-ji Nakama, Jens Oehlschaegel, Steve
-Oncley, Richard O'Keefe, Hubert Palme, Roger D. Peng, Jose'
-C. Pinheiro, Tony Plate, Anthony Rossini, Jonathan Rougier, Guenther
-Sawitzki, Marc Schwartz, Detlef Steuer, Bill Simpson, Gordon Smyth,
-Adrian Trapletti, Terry Therneau, Rolf Turner, Bill Venables, Gregory
-R. Warnes, Andreas Weingessel, Morten Welinder, James Wettenhall,
-Simon Wood, and Achim Zeileis
-
-We have probably omitted some important names here because of incomplete
-record keeping.	 If we have overlooked you, please let us know and we'll
-update the list.
+Goran Brostrom, Patrick Burns, Vince Carey, Saikat DebRoy, 
+Brian D'Urso, Lyndon Drake, Dirk Eddelbuettel, Claus Ekstrom,
+Sebastian Fischmeister, John Fox, Paul Gilbert, Yu Gong, 
+Gabor Grothendieck, Frank E Harrell Jr, Torsten Hothorn, Robert King,
+Kjetil Kjernsmo, Roger Koenker, Philippe Lambert, Jan de Leeuw, 
+Uwe Ligges, Jim Lindsey, Patrick Lindsey, Catherine Loader, 
+Gordon Maclean, John Maindonald, David Meyer, Ei-ji Nakama, 
+Jens Oehlschaegel, Steve Oncley, Richard O'Keefe, Hubert Palme, 
+Roger D. Peng, Jose' C. Pinheiro, Tony Plate, Anthony Rossini,
+Jonathan Rougier, Guenther Sawitzki, Marc Schwartz, Detlef Steuer,
+Bill Simpson, Gordon Smyth, Adrian Trapletti, Terry Therneau, 
+Rolf Turner, Bill Venables, Gregory R. Warnes, Andreas Weingessel,
+Morten Welinder, James Wettenhall, Simon Wood, and Achim Zeileis
 
 The R Foundation may decide to give out <first.lastname>@R-project.org
 email addresses to contributors to the R Project (even without making them
@@ -26,7 +22,7 @@ members of the R Foundation) when in the view of the R Foundation this
 would help advance the R project.
 
 The R Core Group, Roger Bivand, John Fox and Bill Venables are the
-regular members of the R Foundation.  In addition, Dirk Eddelbuettel,
+ordinary members of the R Foundation.  In addition, Dirk Eddelbuettel,
 Torsten Hothorn, Uwe Ligges, David Meyer, Deepayan Sarkar, Simon Wood,
 and Achim Zeileis are also e-addressable by
 <Firstname>.<Lastname>@R-project.org.
@@ -42,8 +38,8 @@ Auckland assisted Ross Ihaka with the original Macintosh port.
 
 R was inspired by the S environment which has been principally
 developed by John Chambers, with substantial input from Douglas Bates,
-Rick Becker, Bill Cleveland, Trevor Hastie, Daryl Pregibon and Allan
-Wilks.
+Rick Becker, Bill Cleveland, Trevor Hastie, Daryl Pregibon and 
+Allan Wilks.
 
 A special debt is owed to John Chambers who has graciously contributed
 advice and encouragement in the early days of R and later became a
