--- a/NEWS
+++ b/NEWS
@@ -29,15 +29,21 @@ NEW FEATURES
 	improvements to the way the hash code is generated in
 	unique.c.
 
-    o	install.packages() has a new argument 'libs_only' to optionally
-	pass --libs-only to INSTALL and works analogously for Windows
-	binary installs (to add support for 64- or 32-bit Windows).
-
 
 DEPRECATED & DEFUNCT
 
     o   Supplying the parser with a string containing both octal/hex and
 	Unicode escapes is now an error.
+
+
+PACKAGE INSTALLATION
+
+    o	install.packages() has a new argument 'libs_only' to optionally
+	pass --libs-only to INSTALL and works analogously for Windows
+	binary installs (to add support for 64- or 32-bit Windows).
+
+    o	When sub-architectures are in use, the installed architectures
+	are recorded in the 'Archs' field of the DESCRIPTION file.
 
 
 INSTALLATION
