add subarch filter for available.packages (untested)
git-svn-id: https://svn.r-project.org/R/trunk@51550 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,8 @@ PACKAGE INSTALLATION
 
     o	When sub-architectures are in use, the installed architectures
 	are recorded in the 'Archs' field of the DESCRIPTION file.
+	There is a new default filter, "subarch", in
+	available.packages() to make use of this.
 
 
 INSTALLATION
